# _help_

./: .gitignore  README.md  dictionary
MPI/: allGather_tutorial.cpp  blocking_Sendrecv_1to1_benchmark.cpp  blocking_send.cpp  blocking_send_1to1_benchmark.cpp  blocking_send_tutorial.cpp  cluster_run.sh  derived_datatype.cpp  gather_tutorial.cpp  hello_world.cpp  hello_world_tutorial.cpp  reduce_benchmark.cpp  reduce_tutorial.cpp  run.sh
MPI/blocking_send_receive_benchmark/: plot_time.m
MPI/jacobi/: cart_grid.h  cat_log.sh  io.h  main.cpp
MPI/reduction_benchmark/: plot_time.m
QtGUIFramework/Basic/: CMakeLists.txt  main.cpp
QtGUIFramework/Calculator/: CMakeLists.txt  button.cpp  button.h  calculator.cpp  calculator.h  main.cpp
QtGUIFramework/SignalsAndSlots/: ButtonC.cpp  ButtonC.h  CMakeLists.txt  ConverterC.cpp  ConverterC.h  main.cpp
algorithms/discrete_particle/: median.h  particle.h  randomGenerator.h  test_median.cpp
algorithms/divide-conquer/: equally_dividing_plane.cpp  merge_sort.cpp  nearest_neighbour.cpp
cpp/IO/: basic_in.cpp  basic_out.cpp  csv2vec.cpp  data.txt  io.pro  numbers.txt  txt2vec.cpp
cpp/auto/: auto_literals.cpp  cv_qualifier.cpp  type_deduction.cpp  type_deduction_lambda.cpp
cpp/boost_ex/: CMakeLists.txt  README.md  filesystem_examples.cpp  qt.pro  random_numbers_ex.cpp  readme.md  seeder.cpp  staticvec.cpp  type_deduction.cpp  uniform1d.cpp
cpp/casting/: constCast.cpp  dynamicCast.cpp  reinterpretCast.cpp  staticCast.cpp
cpp/cmake_tutorial/: CMakeLists.txt  PrintVariables.cmake  complex.cpp  config.h.in  readme  runscript.sh
cpp/cmake_tutorial/lib/: CMakeLists.txt
cpp/cmake_tutorial/lib/src/: arithmetic.cpp
cpp/cmake_tutorial/src/: CMakeLists.txt
cpp/cmake_tutorial/src/include/: complex.h  io.h
cpp/cmake_tutorial/src/src1/: complex.cpp  main.cpp
cpp/cmake_tutorial/src/src2/: io.cpp
cpp/compilation_linking/: CMakeLists.txt  arithmetic.cpp  arithmetic.h  clean.sh  complex.cpp  complex.h  main.cpp  run.sh
cpp/constexpr/: basic.cpp  class_example.cpp  fibonacci.cpp  template_argument_test.cpp
cpp/containers/: equality_vs_equivalence.cpp  erase_remove.cpp  modifying_stl_algo.cpp  non_modifying_stl_algo.cpp  sorted_index.cpp
cpp/copy_move/: complex_vector.cpp  complex_vector.h  copy_elision.cpp  lvalue_rvalue.cpp  main.cpp  main_complex.cpp
cpp/cpp11/: auto_literals.cpp  basic.cpp
cpp/cpp20_tests/version_test/: CMakeLists.txt  main.cpp
cpp/datatypes/: calculate_sizeof_struct.cpp  char2binary.cpp  example_size_t.cpp  float2binary.cpp  integral_precision.cpp  loss_of_precision.cpp  myutils.h  precision.cpp  promotion.cpp  qt.pro  single_precision.cpp
cpp/design_patterns/: class_adapter_pattern.cpp  delegation_vs_inheritance.cpp  handle_body_idiom.cpp  lazy_loading.cpp  null_object.cpp  object_adapter_pattern.cpp  proxy.cpp  singleton.cpp
cpp/design_patterns/anonymous/: CMakeLists.txt  anonymous_patterns.pro  detection.cpp  detection_pattern.pro  transmit_arbitrary_objects_across_comm_channel.cpp
cpp/design_patterns/clone/: CMakeLists.txt  header.h  main.cpp
cpp/exceptions/: bad_alloc.cpp  basic_exception.cpp  basic_exception1.cpp  basic_exception2.cpp  class_invariant.cpp  custom_exception.cpp  nullptr_exception.cpp  pixel.cpp  scope_guard.cpp
cpp/explicit/: conversion_operator.cpp  explicit_constructor.cpp
cpp/function_pointers/: basic.cpp  function_pointers.pro  member_function_pointers.cpp  type_erasure_using_std_function.cpp  withTemplates.cpp  with_templates.cpp
cpp/functors/: functor.cpp  lambda.cpp  pass_by_copy_or_ref.cpp  pure_functions_as_predicates.cpp
cpp/geometry/: CMakeLists.txt  basic_op.cpp  minimum_bounding_rectangle.cpp  minimum_oriented_bounding_rectangle.cpp  rtree_search.cpp
cpp/inheritance/: abstract_classes.cpp  class_adapter_pattern.cpp  diamond_problem.cpp  nested_classes.cpp  singleton.cpp  templates.cpp  type_of_inheritance.cpp
cpp/lambdas/: basic_functor.cpp  basic_lambda.cpp  lambdas_and_scope_rules.cpp  predicate_pass_by_copy_or_ref.cpp  pure_functions_as_predicates.cpp  return_type_deduction_lambda.cpp
cpp/misc/: ADL_KoenigLookup.cpp  auto_literals.cpp  basic.cpp  const_revision.cpp  cv_qualifier.cpp  initializer_list.cpp  size_t_ex.cpp  sizeof.cpp  sizeof_struct.cpp  void_ptr.cpp
cpp/move_semantics/: CMakeLists.txt  complex_vector.h  copy_elision.cpp  lvalue_rvalue.cpp  push_emplace.cpp
cpp/move_semantics/SpecialMemberFunctions/: CMakeLists.txt  complex_vector.cpp  complex_vector.h  main.cpp
cpp/operator_overloading/: arithmetic.cpp  io.cpp  new.cpp
cpp/reference_counting/: invasive_counting.cpp  problem.cpp
cpp/regex_examples/: EditConfig.cpp  README.md  regex_replace.cpp  search.cpp
cpp/smart_pointers/: problem.cpp  shared_pointer.cpp  (+1 more)
cpp/template_metaprogramming/traits/: CMakeLists.txt  iterator_traits.cpp  type_traits.cpp
multithreading/stdthreads/: CMakeLists.txt  basic.cpp  entangled_cout.cpp  improved_producer_consumer.cpp  pass_by_copy_or_ref.cpp  producer_consumer.cpp  producer_consumer_using_condition_variables.cpp  producer_consumer_using_thread_local.cpp  try_lock.cpp  vector_of_thread.cpp
opencv/: readme.md
opencv/base64_encoding/: CMakeLists.txt  main.cpp
opencv/core_module/: CMakeLists.txt  apply_kernel.cpp  brightness_contrast_correct.cpp  dft.cpp  main.cpp  mat_manip.cpp  mat_underscore_manip.cpp  showImage.cpp  trackbar.cpp
opencv/imgproc_module/: CMakeLists.txt  basic_drawing.cpp  filtering.cpp  find_lines.cpp  main.cpp  morphology_transformations.cpp
opencv/imgproc_module/base64_encoding/: CMakeLists.txt  main.cpp  readme.md
opencv/mouse_keyboard_events/: CMakeLists.txt  MouseEvents.cpp  MouseEvents.h  main.cpp
opencv/videoio_module/: CMakeLists.txt  main.cpp
pyt/: OOP.ipynb  basic_matplotlib.ipynb  basic_numpy.ipynb  blas_routines.ipynb  h5py_basic.ipynb  h5py_parallel_read.ipynb  io.ipynb  matplotlib_basics.ipynb  numpy_basics.ipynb  numpy_basics.md  sklearn_logistic_regression_example.ipynb
scientific_cpp_training/: notes_scientific_cpp.docx
xml_parser/: CMakeLists.txt  Config.xml  main.cpp  readme.md
(+291 files in other folders)
